--- a/FinDataChallenge/takazawa/notebooks/baseline_target_encoding_cv.ipynb
+++ b/FinDataChallenge/takazawa/notebooks/baseline_target_encoding_cv.ipynb
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'longitude', 'location', 'origin', 'geohash', 'latitude'}\n"
+      "{'location', 'origin', 'geohash', 'latitude', 'longitude'}\n"
      ]
     }
    ],
@@ -339,70 +339,70 @@
      "output_type": "stream",
      "text": [
       "fold No. =  0\n",
-      "[10]\tvalid_0's Macrof1: 0.679048\n",
-      "[20]\tvalid_0's Macrof1: 0.678422\n",
-      "[30]\tvalid_0's Macrof1: 0.679955\n",
-      "[40]\tvalid_0's Macrof1: 0.682134\n",
-      "[50]\tvalid_0's Macrof1: 0.680476\n",
-      "[60]\tvalid_0's Macrof1: 0.681688\n",
-      "[70]\tvalid_0's Macrof1: 0.681813\n",
-      "[80]\tvalid_0's Macrof1: 0.682358\n",
-      "[90]\tvalid_0's Macrof1: 0.680841\n",
-      "[100]\tvalid_0's Macrof1: 0.680805\n",
+      "[10]\tvalid_0's Macrof1: 0.67221\n",
+      "[20]\tvalid_0's Macrof1: 0.671485\n",
+      "[30]\tvalid_0's Macrof1: 0.670574\n",
+      "[40]\tvalid_0's Macrof1: 0.672791\n",
+      "[50]\tvalid_0's Macrof1: 0.676263\n",
+      "[60]\tvalid_0's Macrof1: 0.676787\n",
+      "[70]\tvalid_0's Macrof1: 0.677848\n",
+      "[80]\tvalid_0's Macrof1: 0.679993\n",
+      "[90]\tvalid_0's Macrof1: 0.678207\n",
+      "[100]\tvalid_0's Macrof1: 0.680928\n",
       "now caluculating MacroF1 values .....\n",
-      "fold 0 MacroF1: 0.6837238209415563\n",
+      "fold 0 MacroF1: 0.6815196565893237\n",
       "fold No. =  1\n",
-      "[10]\tvalid_0's Macrof1: 0.675819\n",
-      "[20]\tvalid_0's Macrof1: 0.67719\n",
-      "[30]\tvalid_0's Macrof1: 0.683399\n",
-      "[40]\tvalid_0's Macrof1: 0.681614\n",
-      "[50]\tvalid_0's Macrof1: 0.683506\n",
-      "[60]\tvalid_0's Macrof1: 0.684687\n",
-      "[70]\tvalid_0's Macrof1: 0.684942\n",
-      "[80]\tvalid_0's Macrof1: 0.683732\n",
-      "[90]\tvalid_0's Macrof1: 0.686052\n",
-      "[100]\tvalid_0's Macrof1: 0.685639\n",
+      "[10]\tvalid_0's Macrof1: 0.676689\n",
+      "[20]\tvalid_0's Macrof1: 0.676277\n",
+      "[30]\tvalid_0's Macrof1: 0.681054\n",
+      "[40]\tvalid_0's Macrof1: 0.682928\n",
+      "[50]\tvalid_0's Macrof1: 0.681497\n",
+      "[60]\tvalid_0's Macrof1: 0.680838\n",
+      "[70]\tvalid_0's Macrof1: 0.680375\n",
+      "[80]\tvalid_0's Macrof1: 0.678758\n",
+      "[90]\tvalid_0's Macrof1: 0.678758\n",
+      "[100]\tvalid_0's Macrof1: 0.681378\n",
       "now caluculating MacroF1 values .....\n",
-      "fold 1 MacroF1: 0.68682229501981\n",
+      "fold 1 MacroF1: 0.6842781069276336\n",
       "fold No. =  2\n",
-      "[10]\tvalid_0's Macrof1: 0.674205\n",
-      "[20]\tvalid_0's Macrof1: 0.676647\n",
-      "[30]\tvalid_0's Macrof1: 0.678795\n",
-      "[40]\tvalid_0's Macrof1: 0.677223\n",
-      "[50]\tvalid_0's Macrof1: 0.675286\n",
-      "[60]\tvalid_0's Macrof1: 0.677177\n",
-      "[70]\tvalid_0's Macrof1: 0.678033\n",
-      "[80]\tvalid_0's Macrof1: 0.675953\n",
-      "[90]\tvalid_0's Macrof1: 0.675668\n",
-      "[100]\tvalid_0's Macrof1: 0.675065\n",
+      "[10]\tvalid_0's Macrof1: 0.67464\n",
+      "[20]\tvalid_0's Macrof1: 0.676558\n",
+      "[30]\tvalid_0's Macrof1: 0.678082\n",
+      "[40]\tvalid_0's Macrof1: 0.678405\n",
+      "[50]\tvalid_0's Macrof1: 0.677758\n",
+      "[60]\tvalid_0's Macrof1: 0.678019\n",
+      "[70]\tvalid_0's Macrof1: 0.678773\n",
+      "[80]\tvalid_0's Macrof1: 0.677868\n",
+      "[90]\tvalid_0's Macrof1: 0.676522\n",
+      "[100]\tvalid_0's Macrof1: 0.676277\n",
       "now caluculating MacroF1 values .....\n",
-      "fold 2 MacroF1: 0.6807903189433329\n",
+      "fold 2 MacroF1: 0.6790552659369395\n",
       "fold No. =  3\n",
-      "[10]\tvalid_0's Macrof1: 0.673214\n",
-      "[20]\tvalid_0's Macrof1: 0.673066\n",
-      "[30]\tvalid_0's Macrof1: 0.672537\n",
-      "[40]\tvalid_0's Macrof1: 0.677878\n",
-      "[50]\tvalid_0's Macrof1: 0.673953\n",
-      "[60]\tvalid_0's Macrof1: 0.673278\n",
-      "[70]\tvalid_0's Macrof1: 0.674248\n",
-      "[80]\tvalid_0's Macrof1: 0.674073\n",
-      "[90]\tvalid_0's Macrof1: 0.673852\n",
-      "[100]\tvalid_0's Macrof1: 0.674414\n",
+      "[10]\tvalid_0's Macrof1: 0.676068\n",
+      "[20]\tvalid_0's Macrof1: 0.672837\n",
+      "[30]\tvalid_0's Macrof1: 0.673739\n",
+      "[40]\tvalid_0's Macrof1: 0.673597\n",
+      "[50]\tvalid_0's Macrof1: 0.672533\n",
+      "[60]\tvalid_0's Macrof1: 0.672166\n",
+      "[70]\tvalid_0's Macrof1: 0.674354\n",
+      "[80]\tvalid_0's Macrof1: 0.674491\n",
+      "[90]\tvalid_0's Macrof1: 0.675231\n",
+      "[100]\tvalid_0's Macrof1: 0.674157\n",
       "now caluculating MacroF1 values .....\n",
-      "fold 3 MacroF1: 0.6778777267457856\n",
+      "fold 3 MacroF1: 0.6769504600363021\n",
       "fold No. =  4\n",
-      "[10]\tvalid_0's Macrof1: 0.676069\n",
-      "[20]\tvalid_0's Macrof1: 0.681355\n",
-      "[30]\tvalid_0's Macrof1: 0.680617\n",
-      "[40]\tvalid_0's Macrof1: 0.680963\n",
-      "[50]\tvalid_0's Macrof1: 0.68094\n",
-      "[60]\tvalid_0's Macrof1: 0.684429\n",
-      "[70]\tvalid_0's Macrof1: 0.682803\n",
-      "[80]\tvalid_0's Macrof1: 0.68262\n",
-      "[90]\tvalid_0's Macrof1: 0.683711\n",
-      "[100]\tvalid_0's Macrof1: 0.68457\n",
+      "[10]\tvalid_0's Macrof1: 0.683766\n",
+      "[20]\tvalid_0's Macrof1: 0.684112\n",
+      "[30]\tvalid_0's Macrof1: 0.686729\n",
+      "[40]\tvalid_0's Macrof1: 0.685311\n",
+      "[50]\tvalid_0's Macrof1: 0.683138\n",
+      "[60]\tvalid_0's Macrof1: 0.684048\n",
+      "[70]\tvalid_0's Macrof1: 0.683003\n",
+      "[80]\tvalid_0's Macrof1: 0.684114\n",
+      "[90]\tvalid_0's Macrof1: 0.686309\n",
+      "[100]\tvalid_0's Macrof1: 0.687559\n",
       "now caluculating MacroF1 values .....\n",
-      "fold 4 MacroF1: 0.6851297909188753\n"
+      "fold 4 MacroF1: 0.687558997253426\n"
      ]
     }
    ],
